--- a/portfolio_NatySantos/templates/calendar.html
+++ b/portfolio_NatySantos/templates/calendar.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/app.html' %}
 
-{% block title %}Nathy Santos{% endblock %}
+{% block title %}Calendar | Nathy Santos{% endblock %}
 
 {% block content %}
 
