--- a/portfolio_NatySantos/templates/portfolio/menuPortfolio.html
+++ b/portfolio_NatySantos/templates/portfolio/menuPortfolio.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Portafolio | Nathy Santos
+Portafolios | Nathy Santos
 {% endblock %}
 
 {% block content %}
