--- a/portfolio_NatySantos/templates/index.html
+++ b/portfolio_NatySantos/templates/index.html
@@ -88,7 +88,7 @@
     <h2 class="text-4xl md:text-5xl font-bold mb-4 text-white drop-shadow-lg">
       FOTOGRAFÍA QUE CUENTA HISTORIAS
     </h2>
-    <a href="#calendario"
+    <a href="{% url 'calendar' %}"
       class="inline-block reserva_link text-white px-8 py-3 rounded-full text-lg transition transform hover:scale-105 mt-8">
       RESERVA TU DÍA
     </a>
