--- a/portfolio_NatySantos/templates/nathySantos.html
+++ b/portfolio_NatySantos/templates/nathySantos.html
@@ -17,7 +17,7 @@
     <!-- Texto de presentación -->
     <div class="text-center md:text-justify">
       <h2 class="text-4xl font-bold text-gray-800 mb-4">Hola, soy</h2>
-      <h3 class="text-5xl font-extrabold text-[#9b7b5c] mb-6">Nathalie Santos</h3>
+      <h3 class="text-5xl font-bold text-[#9b7b5c] mb-6">Nathalie Santos</h3>
       <p class="text-gray-600 leading-relaxed mb-8">
         Creo que cada historia merece ser contada con luz, emoción y autenticidad. 
         Me apasiona capturar momentos reales, combinando luz natural y artificial para dar vida a cada imagen. 
