--- a/portfolio_NatySantos/static/css/custom.css
+++ b/portfolio_NatySantos/static/css/custom.css
@@ -89,61 +89,61 @@
 /* Galerias / Portafolio individual*/
 
 .gallery-section {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-  }
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+}
 
-  .gallery-background {
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
-    transition: opacity 0.5s ease;
-  }
+.gallery-background {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 90vh;
+  object-fit: contain;
+  object-position: center;
+  z-index: 0;
+  transition: opacity 0.5s ease;
+}
 
-  .overlay {
-    position: absolute;
-    inset: 0;
-    background-color: rgba(0, 0, 0, 0.4);
-    z-index: 10;
-  }
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 10;
+}
 
-  .carousel {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    overflow-x: auto;
-    white-space: nowrap;
-    z-index: 30;
-    opacity: 1;
-    transition: opacity 0.5s ease;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 1rem 2rem;
-  }
+.hover-zone {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  z-index: 20;
+}
 
-  .carousel img {
-    height: 7rem;
-    margin-right: 1rem;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-  }
+.carousel {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+  z-index: 30;
+  opacity: 0;
+  pointer-events: none;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1rem 2rem;
+  transition: opacity 0.3s ease;
+}
 
-  .carousel img:hover {
-    transform: scale(1.05);
-  }
+.carousel img {
+  height: 7rem;
+  margin-right: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
 
-  .title {
-    position: relative;
-    z-index: 20;
-    color: white;
-    text-align: center;
-    font-size: 3rem;
-    font-weight: bold;
-    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    top: 45%;
-  }
+.carousel img:hover {
+  transform: scale(1.05);
+}
