--- a/portfolio_NatySantos/templates/portfolio/menuPortfolio.html
+++ b/portfolio_NatySantos/templates/portfolio/menuPortfolio.html
@@ -40,7 +40,7 @@ Portafolios | Nathy Santos
           <img src="{% static 'img/webp_format/menuPortfolio/15Años.webp' %}" alt="15 Años"
             class="w-full h-full object-cover transition duration-300 ease-in-out group-hover:opacity-60 group-hover:scale-105">
           <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-300 ease-in-out">
-            <a href="#portafolio" class="bg-black bg-opacity-60 resaltar_VerMas text-white text-lg px-6 py-2 rounded-full transition">VER MÁS</a>
+            <a href="{% url '15yearsOld' %}" class="bg-black bg-opacity-60 resaltar_VerMas text-white text-lg px-6 py-2 rounded-full transition">VER MÁS</a>
           </div>
         </div>
 
@@ -58,7 +58,7 @@ Portafolios | Nathy Santos
           <img src="{% static 'img/webp_format/menuPortfolio/porTiempo.webp' %}" alt="Eventos por tiempo"
             class="w-full h-full object-cover transition duration-300 ease-in-out group-hover:opacity-60 group-hover:scale-105">
           <div class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-300 ease-in-out">
-            <a href="#portafolio" class="bg-black bg-opacity-60 resaltar_VerMas text-white text-lg px-6 py-2 rounded-full transition">VER MÁS</a>
+            <a href="{% url 'timeEvents' %}" class="bg-black bg-opacity-60 resaltar_VerMas text-white text-lg px-6 py-2 rounded-full transition">VER MÁS</a>
           </div>
         </div>
 
