15 años y eventos por tiempo configurados / flechas laterales en los portafolios

--- a/portfolio_NatySantos/static/css/custom.css
+++ b/portfolio_NatySantos/static/css/custom.css
@@ -121,6 +121,33 @@
   z-index: 20;
 }
 
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2.5rem;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  z-index: 40;
+  transition: background-color 0.3s ease;
+  border-radius: 10%;
+}
+
+.arrow:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.arrow.left {
+  left: 10px;
+}
+
+.arrow.right {
+  right: 10px;
+}
+
 .carousel {
   position: absolute;
   bottom: 0;
