--- a/portfolio_NatySantos/templates/index.html
+++ b/portfolio_NatySantos/templates/index.html
@@ -21,16 +21,16 @@
 
       <!-- Portafolios principales -->
 
-      <!--CIVILES-->
+      <!--EVENTOS POR TIEMPO-->
 
       <div class="text-center">
-        <h4 class="text-2xl font-bold mb-4">CIVILES</h3>
+        <h4 class="text-2xl font-bold mb-4">POR TIEMPO</h3>
           <div class="group relative w-full h-[320px] overflow-hidden rounded-md shadow-md mb-4">
             <img src="/static/img/webp_format/index/CIVIL_accesoR.webp" alt="Sesión bodas"
               class="w-full h-full object-cover object-center transition duration-300 ease-in-out group-hover:opacity-60">
             <div
               class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-300 ease-in-out">
-              <a href="#portafolio"
+              <a href="{% url 'timeEvents' %}"
                 class="text-white text-xl font-semibold bg-black bg-opacity-60 px-6 py-2 rounded-full transition duration-300 ease-in-out resaltar_VerMas">
                 VER MÁS
               </a>
@@ -47,7 +47,7 @@
               class="w-full h-full object-cover object-center transition duration-300 ease-in-out group-hover:opacity-60">
             <div
               class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-300 ease-in-out">
-              <a href="#portafolio"
+              <a href="{% url 'weddings' %}"
                 class="text-white text-xl font-semibold bg-black bg-opacity-60 px-6 py-2 rounded-full transition duration-300 ease-in-out resaltar_VerMas">
                 VER MÁS
               </a>
@@ -64,7 +64,7 @@
               class="w-full h-full object-cover object-center transition duration-300 ease-in-out group-hover:opacity-60">
             <div
               class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-300 ease-in-out">
-              <a href="#portafolio"
+              <a href="{% url '15yearsOld' %}"
                 class="text-white text-xl font-semibold bg-black bg-opacity-60 px-6 py-2 rounded-full transition duration-300 ease-in-out resaltar_VerMas">
                 VER MÁS
               </a>
