--- a/portfolio_NatySantos/templates/contact.html
+++ b/portfolio_NatySantos/templates/contact.html
@@ -37,6 +37,7 @@
     <div class="formulario p-8 rounded-2xl shadow-md">
       <h3 class="text-2xl font-bold mb-6 text-center">CONTÁCTAME</h3>
       <form action="{% url 'contact' %}" method="POST" class="space-y-4">
+        {% csrf_token %}
         <input type="text" name="nombre" placeholder="Tu Nombre"
           class="w-full p-3 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400">
         <input type="email" name="correo" placeholder="Correo Electrónico"
@@ -53,5 +54,13 @@
 
   </div>
 </section>
+
+{% if messages %}
+  <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded mb-4">
+    {% for message in messages %}
+      {{ message }}
+    {% endfor %}
+  </div>
+{% endif %}
 
 {% endblock %}
