Formulario de contactto y login mejorados

--- a/portfolio_NatySantos/admin_NathySantos/templates/admin_NathySantos/category_form.html
+++ b/portfolio_NatySantos/admin_NathySantos/templates/admin_NathySantos/category_form.html
@@ -41,7 +41,7 @@
 
   <!-- Subida de imágenes -->
 <a href="{% url 'manage_images' categoria.id %}" class="text-sm button text-blue-600 hover:underline">
-  Gestionar imágenes
+  Gestionar Fotografías
 </a>
 
 </section>
