--- a/portfolio_NatySantos/templates/layouts/app.html
+++ b/portfolio_NatySantos/templates/layouts/app.html
@@ -41,4 +41,13 @@
 
 </body>
 
+<script>
+  const menuBtn = document.getElementById('menu-btn');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  menuBtn.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+  });
+</script>
+
 </html>
