Ajustes url index

--- a/portfolio_NatySantos/admin_NathySantos/templates/admin_NathySantos/dashboard.html
+++ b/portfolio_NatySantos/admin_NathySantos/templates/admin_NathySantos/dashboard.html
@@ -21,7 +21,7 @@ Panel de Categorías | Nathy Santos
 <section class="py-8 bg-white m-2 relative">
 
   <div class="container mx-auto px-8">
-    <h2 class="text-3xl font-bold mb-8">Gestion de clientes y eventos </h2>
+    <h2 class="text-3xl font-bold mb-8">Gestion de clientes</h2>
 
     <a href="{% url 'clientes_list' %}"
       class="bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded transition ml-2">
