--- a/portfolio_NatySantos/admin_NathySantos/templates/clientes/editar_evento.html
+++ b/portfolio_NatySantos/admin_NathySantos/templates/clientes/editar_evento.html
@@ -9,7 +9,7 @@
 
   <h2 class="text-2xl font-bold mt-12 text-center">Editar Sesión para {{ evento.cliente.nombre }}</h2>
 
-  <form method="POST" class="space-y-6">
+  <form method="POST" action="{% url 'editar_evento' evento.pk %}" class="space-y-6">
     {% csrf_token %}
 
     <!-- Tipo de Evento -->
