--- a/portfolio_NatySantos/templates/index.html
+++ b/portfolio_NatySantos/templates/index.html
@@ -30,7 +30,7 @@
               class="w-full h-full object-cover object-center transition duration-300 ease-in-out group-hover:opacity-60">
             <div
               class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-300 ease-in-out">
-              <a href="{% url 'timeEvents' %}"
+              <a href="{% url 'portiempo' %}"
                 class="text-white text-xl font-semibold bg-black bg-opacity-60 px-6 py-2 rounded-full transition duration-300 ease-in-out resaltar_VerMas">
                 VER MÁS
               </a>
@@ -47,7 +47,7 @@
               class="w-full h-full object-cover object-center transition duration-300 ease-in-out group-hover:opacity-60">
             <div
               class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition duration-300 ease-in-out">
-              <a href="{% url 'weddings' %}"
+              <a href="{% url 'bodas' %}"
                 class="text-white text-xl font-semibold bg-black bg-opacity-60 px-6 py-2 rounded-full transition duration-300 ease-in-out resaltar_VerMas">
                 VER MÁS
               </a>
