--- a/portfolio_NatySantos/admin_NathySantos/templates/clientes/lista_clientes.html
+++ b/portfolio_NatySantos/admin_NathySantos/templates/clientes/lista_clientes.html
@@ -6,7 +6,7 @@
    
   <a href="{% url 'dashboard' %}"
     class="absolute top-4 right-4 bg-gray-200 hover:bg-gray-300 text-gray-700 text-sm font-medium py-2 px-4 rounded flex items-center shadow">
-    &#8592; Regresar
+    &#8592; Dashboard
   </a>
 
   <h2 class="text-3xl font-bold mb-2">Gestión de Clientes</h2>
