--- a/portfolio_NatySantos/admin_NathySantos/templates/clientes/sesiones.html
+++ b/portfolio_NatySantos/admin_NathySantos/templates/clientes/sesiones.html
@@ -4,13 +4,20 @@
 
   <!-- Botón de regreso -->
   <a href="{% url 'clientes_list' %}"
-    class="absolute top-16 right-4 bg-gray-200 hover:bg-gray-300 text-gray-700 text-sm font-medium py-2 px-4 rounded shadow">
-    &#8592; Regresar
+    class="absolute top-4 right-12 bg-gray-200 hover:bg-gray-300 text-gray-700 text-sm font-medium py-2 px-4 rounded shadow">
+    &#8592; {{ cliente.nombre }}
   </a>
 
+  <!-- botón para ir al dasboard-->
   <a href="{% url 'dashboard' %}"
-    class="absolute top-4 right-4 bg-gray-200 hover:bg-gray-300 text-gray-700 text-sm font-medium py-2 px-4 rounded flex items-center shadow">
-    &#8592; Dashboard
+    class="absolute top-16 right-12 bg-gray-200 hover:bg-gray-300 text-gray-700 text-sm font-medium py-2 px-4 rounded flex items-center shadow">
+    &#8592; Principal
+  </a>
+
+    <!-- Botón de regreso -->
+  <a href="{% url 'listar_eventos' %}"
+    class="absolute top-28 right-12 bg-gray-200 hover:bg-gray-300 text-gray-700 text-sm font-medium py-2 px-4 rounded shadow">
+    &#8592; Sesiones
   </a>
 
   <!-- Botón para abrir el modal -->
