--- a/portfolio_NatySantos/templates/layouts/app.html
+++ b/portfolio_NatySantos/templates/layouts/app.html
@@ -12,6 +12,11 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+  <!-- FullCalendar CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet" />
+  <!-- FullCalendar JS -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
+
   <script src="https://unpkg.com/flowbite@1.6.5/dist/flowbite.js"></script>
 
 </head>
