--- a/portfolio_NatySantos/admin_NathySantos/templates/clientes/sesiones.html
+++ b/portfolio_NatySantos/admin_NathySantos/templates/clientes/sesiones.html
@@ -5,7 +5,7 @@
   <!-- Botón de regreso -->
   <a href="{% url 'clientes_list' %}"
     class="absolute top-4 right-12 bg-gray-200 hover:bg-gray-300 text-gray-700 text-sm font-medium py-2 px-4 rounded shadow">
-    &#8592; {{ cliente.nombre }}
+    &#8592; ir a Clientes
   </a>
 
   <!-- botón para ir al dasboard-->
