--- a/portfolio_NatySantos/static/css/custom.css
+++ b/portfolio_NatySantos/static/css/custom.css
@@ -174,3 +174,14 @@
 .carousel img:hover {
   transform: scale(1.05);
 }
+
+/* Calendario */
+
+.fc-daygrid-event {
+  width: 100% !important;
+  display: block;
+  text-align: center;
+  font-size: 0.875rem;
+  padding: 4px 0;
+  border-radius: 0.375rem;
+}
